Fixed home page text alignment

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 /* CSS Document */
 /* Body */
 body {
+	text-align: center;
 	overflow: hidden;
 }
 
